--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -118,3 +118,29 @@ jobs:
       with:
         name: helm-package
         path: ./*.tgz
+
+  deploy-to-k8s:
+    runs-on: ubuntu-latest
+    needs: [docker-ci, helm-ci]
+    environment: development
+
+    steps:
+    - uses: actions/download-artifact@v4
+      with:
+        name: helm-package
+        path: .
+
+    - name: Set up Helm
+      uses: azure/setup-helm@v4.2.0
+
+    - name: Set up Kubectl
+      uses: azure/setup-kubectl@v3
+
+    - uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+    - uses: azure/aks-set-context@v3
+      with:
+        resource-group: ${{ vars.AZURE_RESOURSE_GROUP }}
+        cluster-name: ${{ vars.AZURE_CLUSTER_NAME }}
