--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,7 @@ env:
 
 jobs:
   python-ci:
+    name: Python CI
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -121,6 +122,7 @@ jobs:
         path: ./*.tgz
 
   deploy-to-k8s:
+    name: Deploy to K8s
     runs-on: ubuntu-latest
     needs: [docker-ci, helm-ci]
     environment: development
