--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -133,6 +133,11 @@ jobs:
         name: helm-package
         path: .
 
+    - uses: actions/download-artifact@v4
+      with:
+        name: helm-artifacts
+        path: .
+
     - name: Set up Helm
       uses: azure/setup-helm@v4.2.0
 
@@ -147,3 +152,17 @@ jobs:
       with:
         resource-group: ${{ vars.AZURE_RESOURSE_GROUP }}
         cluster-name: ${{ vars.AZURE_CLUSTER_NAME }}
+
+    - name: Deploy Helm
+      run: |
+        helm upgrade --install --atomic --wait --timeout 3600s --debug todoapp ./todoapp-*.tgz \
+        -f ./todoapp/values.yaml \
+        --set mysql.secrets.MYSQL_ROOT_PASSWORD="${{ secrets.MYSQL_ROOT_PASSWORD }}" \
+        --set mysql.secrets.MYSQL_USER="${{ secrets.MYSQL_USER }}" \MYSQL_ROOT_PASSWORD
+        --set mysql.secrets.MYSQL_PASSWORD="${{ secrets.MYSQL_PASSWORD }}" \
+        --set todoapp.secrets.SECRET_KEY="${{ secrets.SECRET_KEY }}" \
+        --set todoapp.secrets.DB_NAME="${{ secrets.DB_NAME }}" \
+        --set todoapp.secrets.DB_USER="${{ secrets.DB_USER }}" \
+        --set todoapp.secrets.DB_PASSWORD="${{ secrets.DB_PASSWORD }}" \
+        --set todoapp.secrets.DB_HOST="${{ secrets.DB_HOST }}" \
+        --set todoapp.image.version="${{ github.sha }}"
