--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -121,48 +121,13 @@ jobs:
         name: helm-package
         path: ./*.tgz
 
-  deploy-to-k8s:
-    name: Deploy to K8s
-    runs-on: ubuntu-latest
+  deploy-helm-dev:
+    name: Deploy Helm
+    uses: ./.github/workflows/deployment-workflow.yml
     needs: [docker-ci, helm-ci]
-    environment: development
+    secrets: inherit
+    with:
+      environment: development
+      version: ${{ github.sha }}
 
-    steps:
-    - uses: actions/download-artifact@v4
-      with:
-        name: helm-package
-        path: .
 
-    - uses: actions/download-artifact@v4
-      with:
-        name: helm-artifacts
-        path: .
-
-    - name: Set up Helm
-      uses: azure/setup-helm@v4.2.0
-
-    - name: Set up Kubectl
-      uses: azure/setup-kubectl@v3
-
-    - uses: azure/login@v1
-      with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-    - uses: azure/aks-set-context@v3
-      with:
-        resource-group: ${{ vars.AZURE_RESOURSE_GROUP }}
-        cluster-name: ${{ vars.AZURE_CLUSTER_NAME }}
-
-    - name: Deploy Helm
-      run: |
-        helm upgrade --install --atomic --wait --timeout 3600s --debug todoapp ./todoapp-*.tgz \
-        -f ./todoapp/values.yaml \
-        --set mysql.secrets.MYSQL_ROOT_PASSWORD="${{ secrets.MYSQL_ROOT_PASSWORD }}" \
-        --set mysql.secrets.MYSQL_USER="${{ secrets.MYSQL_USER }}" \MYSQL_ROOT_PASSWORD
-        --set mysql.secrets.MYSQL_PASSWORD="${{ secrets.MYSQL_PASSWORD }}" \
-        --set todoapp.secrets.SECRET_KEY="${{ secrets.SECRET_KEY }}" \
-        --set todoapp.secrets.DB_NAME="${{ secrets.DB_NAME }}" \
-        --set todoapp.secrets.DB_USER="${{ secrets.DB_USER }}" \
-        --set todoapp.secrets.DB_PASSWORD="${{ secrets.DB_PASSWORD }}" \
-        --set todoapp.secrets.DB_HOST="${{ secrets.DB_HOST }}" \
-        --set todoapp.image.version="${{ github.sha }}"
