--- a/.github/workflows/deployment-workflow.yml
+++ b/.github/workflows/deployment-workflow.yml
@@ -51,7 +51,7 @@ jobs:
           helm upgrade --install --atomic --wait --timeout 3600s --debug todoapp ./todoapp-*.tgz \
             -f ${{ inputs.helm-values-path}} \
             --set mysql.secrets.MYSQL_ROOT_PASSWORD="${{ secrets.MYSQL_ROOT_PASSWORD }}" \
-            --set mysql.secrets.MYSQL_USER="${{ secrets.MYSQL_USER }}" \MYSQL_ROOT_PASSWORD
+            --set mysql.secrets.MYSQL_USER="${{ secrets.MYSQL_USER }}" \
             --set mysql.secrets.MYSQL_PASSWORD="${{ secrets.MYSQL_PASSWORD }}" \
             --set todoapp.secrets.SECRET_KEY="${{ secrets.SECRET_KEY }}" \
             --set todoapp.secrets.DB_NAME="${{ secrets.DB_NAME }}" \
