--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -130,4 +130,16 @@ jobs:
       environment: development
       version: ${{ github.sha }}
 
+  deploy-helm-staging:
+    name: Deploy Helm
+    uses: ./.github/workflows/deployment-workflow.yml
+    needs: deploy-helm-dev
+    secrets: inherit
+    with:
+        environment: staging
+        version: ${{ github.sha }}
+        helm-values-path: ./todoapp/values/stg.yml
+        helm-release-name: todoapp-staging
+
+
 
