--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -138,7 +138,7 @@ jobs:
     with:
         environment: staging
         version: ${{ github.sha }}
-        helm-values-path: ./todoapp/values/stg.yml
+        helm-values-path: ./todoapp/values/stg.yaml
         helm-release-name: todoapp-staging
 
 
