--- a/.github/workflows/deployment-workflow.yml
+++ b/.github/workflows/deployment-workflow.yml
@@ -49,6 +49,12 @@ jobs:
           resource-group: ${{ vars.AZURE_RESOURSE_GROUP }}
           cluster-name: ${{ vars.AZURE_CLUSTER_NAME }}
 
+      - name: Helm Dry Run / Validate
+        run: |
+          helm template ${{ inputs.helm-release-name }} ./todoapp-*.tgz \
+          -f ${{ inputs.helm-values-path}} \
+          --debug
+
       - name: Deploy Helm
         run: |
           helm upgrade --install --atomic --wait --timeout 3600s --debug ${{ inputs.helm-release-name }} ./todoapp-*.tgz \
@@ -61,4 +67,5 @@ jobs:
             --set todoapp.secrets.DB_USER="${{ secrets.DB_USER }}" \
             --set todoapp.secrets.DB_PASSWORD="${{ secrets.DB_PASSWORD }}" \
             --set todoapp.secrets.DB_HOST="${{ secrets.DB_HOST }}" \
-            --set todoapp.image.version="${{ github.sha }}"
+            --set todoapp.image.version="${{ github.sha }}" \
+            --take-ownership
