--- a/.github/workflows/deployment-workflow.yml
+++ b/.github/workflows/deployment-workflow.yml
@@ -49,11 +49,20 @@ jobs:
           resource-group: ${{ vars.AZURE_RESOURSE_GROUP }}
           cluster-name: ${{ vars.AZURE_CLUSTER_NAME }}
 
-      - name: Helm Dry Run / Validate
+      - name: Dry Run Helm
         run: |
-          helm template ${{ inputs.helm-release-name }} ./todoapp-*.tgz \
-          -f ${{ inputs.helm-values-path}} \
-          --debug
+          helm install --dry-run ${{ inputs.helm-release-name }} ./todoapp-*.tgz  \
+          -f ${{ inputs.helm-values-path }} \
+          --set mysql.secrets.MYSQL_ROOT_PASSWORD="${{ secrets.MYSQL_ROOT_PASSWORD }}" \
+          --set mysql.secrets.MYSQL_USER="${{ secrets.MYSQL_USER }}" \
+          --set mysql.secrets.MYSQL_PASSWORD="${{ secrets.MYSQL_PASSWORD }}" \
+          --set todoapp.secrets.SECRET_KEY="${{ secrets.APP_SECRET_KEY }}" \
+          --set todoapp.secrets.DB_NAME="${{ secrets.APP_DB_NAME }}" \
+          --set todoapp.secrets.DB_USER="${{ secrets.MYSQL_USER }}" \
+          --set todoapp.secrets.DB_PASSWORD="${{ secrets.MYSQL_PASSWORD }}" \
+          --set todoapp.secrets.DB_HOST="${{ secrets.APP_DB_HOST }}" \
+          --set todoapp.image.tag=${{ github.sha }}
+
 
       - name: Deploy Helm
         run: |
